tests/ui/parser/issues/issue-98601-delimiter-error-1.rs
fn foo() {
    match 0 {
      _ => {}
    }
    if foo
    }
} //~ ERROR unexpected closing delimiter: `}`

fn main() {}
